--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/historial.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/historial.html
@@ -37,5 +37,6 @@
       {% endfor %}
     </tbody>
   </table>
-  <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Volver al Metodo de Diferencias Divididas</a><br>
+  <button class="butontest_boxshadow_Th"><a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Volver al Metodo de Diferencias Divididas</a></button>
+  <br>
 {% endblock %}
