--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/registro.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/registro.html
@@ -9,7 +9,7 @@
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit" class="btn btn-primary">Registrarse</button>
+      <button type="submit" class="butontest_boxshadow_Th">Registrarse</button>
     </form>
   </div>
 {% endblock %}
