--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaDif.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaDif.html
@@ -11,6 +11,10 @@ Teoría de Diferencias Finitas
     <div>
       {{ explicacion_teorica|safe }}
     </div>
-    <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Diferencias Numericas</a><br>
+    <br><br>
+    <button class="butontest_boxshadow_Th3"><a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Diferencias Numericas</a></button>
+    <br>
   </div>
+  
 {% endblock %}
+
