--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <title>{% block title %}Metodo de Biseccion nuevo{% endblock %}</title>
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"/>
-  <style> 
+  <!-- <link rel="stylesheet" type="text/css"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="{% static 'CSS/reset.css' %}">
+  <link rel="stylesheet" href="{% static 'CSS/Style.css' %}">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+
+
+  <!-- <style>
     .container {
       border: 2px solid black;
       border-radius: 10px;
@@ -23,11 +30,28 @@
       border-top: 1px solid black;
       margin: 20px 0;
     }
-  </style>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+  </style> -->
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body class="bg-secondary">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+<nav class="nav2 navbar-responsive">
+  <a class="logo" title="Pokedex Icon">ANS_Calculator</a>
+  <ul>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a>
+    </li>
+    <li class="nav-item">
+      <a href="{% url 'teoriaB' %}" class="nav-link">Metodo de Biseccion</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'teoriaD' %}">Diferenciacion Numerica</a>
+    </li>
+
+  </ul>
+</nav>
+
+<body class="Bg-White ">
+
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container">
       <a class="navbar-brand" href="#">Calculadora Mamalona</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,17 +71,53 @@
         </ul>
       </div>
     </div>
-  </nav>
-  <div class="container">
-    <header class="text-center py-5">
-      <h1>Metodo de Biseccion Nuevo</h1>
-    </header>
-    <hr>
-    <main>
-      {% block content %}
-      {% endblock %}
-    </main>
-    <hr>
+  </nav> -->
+  <div class="Display-flex-column ">
+
+    <div class="container-fluid  txt_center ">
+      <hr>
+      <main>
+        {% block content %}
+        {% endblock %}
+      </main>
+      <hr>
+    </div>
   </div>
+
 </body>
+<div class="cell-footer">
+  <footer class="pie-pagina plta-dos-backgraund-B">
+    <div class="grupo-1">
+      <div class="Fother-box">
+        <figure>
+          <a href="#">
+            <a href="https://vectorified.com/pokedex-icon" title="Pokedex Icon"><img src="/IMG/Pokeball_SinBg.png"
+                width="350" /></a>
+          </a>
+        </figure>
+      </div>
+      <div class="Fother-box">
+        <h2>Universidad de el Salvador</h2>
+        <p>Departamento de Ingenieria y Arquitectura</p>
+        <p>Ingenieria de Sistemas Informaticos</p>
+      </div>
+      <div class="Fother-box">
+        <h2>SIGUENOS</h2>
+        <div class="red-social">
+          <a id="fb" href="#" class="fa fa-facebook fb"></a>
+          <a id="ig" href="#" class="fa fa-instagram"></a>
+          <a id="tw" href="#" class="fa fa-twitter"></a>
+          <a id="yt" href="https://youtu.be/dQw4w9WgXcQ" class="fa fa-youtube"></a>
+        </div>
+      </div>
+    </div>
+    <div class="grupo-2">
+      <small>&copy; 2024 <b>Drip.css</b> - Todos los Derechos Reservados.</small>
+    </div>
+  </footer>
+</div>
+<script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/66ad0f1cd6.js" crossorigin="anonymous"></script>
+
+
 </html>
