--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/cambio_contraseña.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/cambio_contraseña.html
@@ -11,7 +11,8 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Guardar cambios</button>
+        <button type="submit" class="butontest_boxshadow_Th">Guardar cambios</button>
+
     </form>
 </div>
 {% endblock %}
