--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/login.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/login.html
@@ -6,12 +6,14 @@
 <div class="text-center fade-in">
     <h2 class="mb-4">¡Bienvenido!</h2>
     <form method="post">
+
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Loguearse</button>
+        <br> 
+        <button type="submit" class="butontest_boxshadow_Th set_butontest_boxshadow_colorlightgreen">Loguearse</button>
     </form>
     {% if form.errors %}
-        <div class="alert alert-danger mt-3">
+        <div class="alert-error">
             <ul>
                 {% for field, errors in form.errors.items %}
                     {% for error in errors %}
