--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/perfil.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/perfil.html
@@ -8,11 +8,14 @@
     <img src="https://th.bing.com/th/id/OIP.P_4Oo2saYQaWxBy6F3lY7wAAAA?rs=1&pid=ImgDetMain" style="width=100px; height:100px" class="rounded mx-auto d-block" alt="...">
     {% if user.is_authenticated %}
       <p>Hola {{ user.username }}!</p>
-      <a href="{% url 'cerrar_sesion' %}" class="btn btn-danger">Cerrar Sesion</a>
+      
+      <button class="butontest_boxshadow_Th"><a href="{% url 'cerrar_sesion' %}" class="btn btn-danger">Cerrar Sesion</a></button>
+
       <br>{{ user.username }}
     {% else %}
-      <a href="{% url 'login' %}" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span>Loguearse</a> 
-      <a href="{% url 'cerrar_sesion' %}"class="btn btn-success">Registrarse</a>
+    <button class="butontest_boxshadow_Th"><a href="{% url 'login' %}" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span>Loguearse</a></button>
+    <button class="butontest_boxshadow_Th"><a href="{% url 'cerrar_sesion' %}"class="btn btn-success">Registrarse</a></button>
+
     {% endif %}
   </div>
 {% endblock %}
