--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/diferencias.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/diferencias.html
@@ -6,13 +6,15 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="butontest_boxshadow_Th">Calcular</button>
+            <br>
+            <button class="butontest_boxshadow_Th"><a >Calcular</a></button>
+
 
             <!-- En tu archivo base.html o donde corresponda -->
             {% if user.is_authenticated %}
             
             <button class="butontest_boxshadow_Th"><a href="{% url 'exercise_history' %}">Ver Historial</a></button>
-
+<br>
             {% endif %}
             
         </form>
@@ -20,18 +22,19 @@
         {% if not user.is_authenticated %}
             {% if resultado %}
                 {% if not resultado.error %}
-                    <h2>Resultados:</h2>
-                    <div>
+                <br>
+                    <h2>Resultados :</h2>
+                    <div class="container-regular">
                         <h3>Diferencia hacia adelante:</h3>
                         <p>Resultado: {{ resultado.derivada_fwd }} (Error: {{ resultado.error_fwd }})</p>
                     </div>
                     
-                    <div>
+                    <div class="container-regular">
                         <h3>Diferencia hacia atrás:</h3>
                         <p>Resultado: {{ resultado.derivada_bwd }} (Error: {{ resultado.error_bwd }})</p>
                     </div>
                     
-                    <div>
+                    <div class="container-regular">
                         <h3>Diferencia central:</h3>
                         <p>Resultado: {{ resultado.derivada_cen }} (Error: {{ resultado.error_cen }})</p>
                     </div>
@@ -45,52 +48,64 @@
         {% if user.is_authenticated %}
             {% if resultado %}
                 {% if not resultado.error %}
+                <br>
                     <h2>Resultados:</h2>
-                    <div>
+                    <div class="container-regular">
+                        <hr>
                         <h3>Diferencia hacia adelante:</h3>
                         <p>Resultado: {{ resultado.derivada_fwd }} (Error: {{ resultado.error_fwd }})</p>
                         <p>Fórmula sustituida: {{ resultado.formula_fwd }}</p>
+                        <br>
                         <h4>Paso a paso:</h4>
+                        <hr>
                         <ul>
                             {% for paso in resultado.pasos_fwd %}
+                            <br>
                                 <li>{{ paso }}</li>
                             {% endfor %}
                         </ul>
                     </div>
-                    
-                    <div>
+                    <br><br>
+
+                    <div class="container-regular">
+                   
+                        <br>
                         <h3>Diferencia hacia atrás:</h3>
+                        <hr>
                         <p>Resultado: {{ resultado.derivada_bwd }} (Error: {{ resultado.error_bwd }})</p>
                         <p>Fórmula sustituida: {{ resultado.formula_bwd }}</p>
                         <h4>Paso a paso:</h4>
                         <ul>
                             {% for paso in resultado.pasos_bwd %}
+                            <br>
                                 <li>{{ paso }}</li>
                             {% endfor %}
                         </ul>
                     </div>
-                    
-                    <div>
+                   
+                    <br><br>
+                    <div class="container-regular">
                         <h3>Diferencia central:</h3>
+                        <hr>
                         <p>Resultado: {{ resultado.derivada_cen }} (Error: {{ resultado.error_cen }})</p>
                         <p>Fórmula sustituida: {{ resultado.formula_cen }}</p>
                         <h4>Paso a paso:</h4>
                         <ul>
                             {% for paso in resultado.pasos_cen %}
+                            <br>
                                 <li>{{ paso }}</li>
                             {% endfor %}
                         </ul>
+                        
+                        <p><strong>Derivada exacta:</strong> {{ resultado.derivada_exacta }}</p>
                     </div>
-                    
-                    <p><strong>Derivada exacta:</strong> {{ resultado.derivada_exacta }}</p>
                 {% endif %}
             {% endif %}
-            
-            <h2>Gráfica</h2>
-            <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función" class="img-fluid">
-        {% endif %}
+            <br>
 
-
+                <h2>Gráfica</h2>
+                <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función" class="img-fluid">
+            {% endif %}
     </div>
    
 {% endblock %}
