--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
@@ -42,6 +42,9 @@
             <a href="{% url 'teoriaB' %}" class="nav-link">Metodo de Biseccion</a>
           </li>
           <li class="nav-item">
+            <a href="{% url 'creator' %}" class="nav-link">Creadores</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'teoriaD' %}">Diferenciacion Numerica</a>
           </li>
         </ul>
