--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/baseDiferencias.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/baseDiferencias.html
@@ -43,6 +43,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'teoriaD' %}">Diferenciacion Numerica</a>
         </li>
+        <li class="nav-item">
+          <a href="{% url 'creator' %}" class="nav-link">Creadores</a>
+        </li>
       </ul>
     </div>
   </div>
