--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/diferencias.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/diferencias.html
@@ -7,8 +7,11 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Calcular</button>
+        
         {% if user.is_authenticated %}
-        <a href="{% url 'exercise_history' %}">Ver Historial</a>
+            <a href="{% url 'exercise_history' %}" class="btn btn-link">Ver Historial</a>
+        {% else %}
+            <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="badge text-bg-primary text-wrap">inicia sesión</a>.</p>
         {% endif %}
     </form>
 
@@ -19,37 +22,16 @@
                 <div>
                     <h3>Diferencia hacia adelante:</h3>
                     <p>Resultado: {{ resultado.derivada_fwd }} (Error: {{ resultado.error_fwd }})</p>
-                    <p>Fórmula sustituida: {{ resultado.formula_fwd }}</p>
-                    <h4>Paso a paso:</h4>
-                    <ul>
-                        {% for paso in resultado.pasos_fwd %}
-                        <li>{{ paso }}</li>
-                        {% endfor %}
-                    </ul>
                 </div>
 
                 <div>
                     <h3>Diferencia hacia atrás:</h3>
                     <p>Resultado: {{ resultado.derivada_bwd }} (Error: {{ resultado.error_bwd }})</p>
-                    <p>Fórmula sustituida: {{ resultado.formula_bwd }}</p>
-                    <h4>Paso a paso:</h4>
-                    <ul>
-                        {% for paso in resultado.pasos_bwd %}
-                        <li>{{ paso }}</li>
-                        {% endfor %}
-                    </ul>
                 </div>
 
                 <div>
                     <h3>Diferencia central:</h3>
                     <p>Resultado: {{ resultado.derivada_cen }} (Error: {{ resultado.error_cen }})</p>
-                    <p>Fórmula sustituida: {{ resultado.formula_cen }}</p>
-                    <h4>Paso a paso:</h4>
-                    <ul>
-                        {% for paso in resultado.pasos_cen %}
-                        <li>{{ paso }}</li>
-                        {% endfor %}
-                    </ul>
                 </div>
 
                 <p><strong>Derivada exacta:</strong> {{ resultado.derivada_exacta }}</p>
@@ -70,7 +52,7 @@
                     <h4>Paso a paso:</h4>
                     <ul>
                         {% for paso in resultado.pasos_fwd %}
-                        <li>{{ paso }}</li>
+                            <li>{{ paso }}</li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -82,7 +64,7 @@
                     <h4>Paso a paso:</h4>
                     <ul>
                         {% for paso in resultado.pasos_bwd %}
-                        <li>{{ paso }}</li>
+                            <li>{{ paso }}</li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -94,7 +76,7 @@
                     <h4>Paso a paso:</h4>
                     <ul>
                         {% for paso in resultado.pasos_cen %}
-                        <li>{{ paso }}</li>
+                            <li>{{ paso }}</li>
                         {% endfor %}
                     </ul>
                 </div>
